# njs-mywork-tools

./: .cursorrules  .env.example  .gitignore  README.md  TODO.md  pyproject.toml  settings.yaml
attendance_tracker/src/models/: timecard_data.py
attendance_tracker/src/reader/: excel_reader.py
attendance_tracker/tests/data/: output.xlsx
attendance_tracker/tests/processor/: test_time_processor.py
attendance_tracker/tests/reader/: test_excel_reader.py
attendance_tracker/tests/writer/: test_excel_writer.py
examples/: create_shokuin.py  create_shokuin_example.py  google_sheet_exaplle.py  pands_use_excel_example.py  surreal_livequery_exmple.py  surrealdb_mail_example.py  xlwings-use-excel.py  xlwings_use_excel_example.py
scripts/: receive_mail.py  recieve_mail.sh  register_cron.sh  save_receive_mailbox.py  save_sent_mailbox.py  submit_mail.py  transfer_attendance.py
src/: __init__.py  settings.py
src/attendance/: settings.py
src/attendance/models/: employee.py  timecard_data.py
src/attendance/reader/: excel_reader.py  excel_timecard_reader.py  google_sheet_reader.py  google_timecard_reader.py  timecard_reader.py
src/attendance/writer/: excel_writer.py
src/attendance_tracker/: main.py
src/attendance_tracker/models/: timecard_data.py
src/attendance_tracker/processor/: time_processor.py
src/attendance_tracker/reader/: excel_reader.py
src/mail/: client.py  repository.py
src/njs_mywork_tools/: __init__.py  settings.py
src/storage/: database.py
src/utils/: logger.py  shokuin.py
tests/data/: input.xlsx  paid_leave.xlsx
(+59 files in other folders)
